--- a/views/home.ejs
+++ b/views/home.ejs
@@ -269,7 +269,7 @@
                 </section>
             </header><!-- End Header -->
             <!-- verticle thumb slider -->
-            <section id="verticalSlider-light">
+            <section style="display:none;" id="verticalSlider-light">
                 <div class="row">
                     <div class="large-12 columns">
                         <div class="thumb-slider">
@@ -304,7 +304,7 @@ Your browser
 									<% videos.forEach(function(video) { %>
                                     <div class="ver-thumbnail" >
 									<a  href="/watch/<%= video %>" >
-                                        <img src="http://placehold.it/800x400" alt="imaga">	</a>
+                                        <img  src="/thumbnails/<%= video.split(".")[0] %>.jpg" alt="imaga">	</a>
                                         <div class="item-title">
                                             <span>Eğitim</span>
                                             <h6><%= video %></h6>
@@ -342,7 +342,7 @@ Your browser
                    <% videos.forEach(function(video) { %>
 				   <div class="item">
                         <figure class="premium-img">
-                            <img src="http://placehold.it/400x300" alt="carousel">
+                            <img  src="/thumbnails/<%= video.split(".")[0] %>.jpg" alt="carousel">
                             <figcaption>
                                 <h5><%= video %></h5>
                                 <p>Eğitim Videoları</p>
@@ -382,7 +382,7 @@ Your browser
                                 <div class="large-12 columns fullwidth-video">
                                     <div class="post">
                                         <div class="post-thumb">
-                                            <img src="http://placehold.it/770x400" alt="landing">
+                                            <img  src="/thumbnails/<%= videos[videos.length - 1].split(".")[0] %>.jpg" alt="landing">
                                             <a href="/watch/<%= videos[videos.length - 1] %>" class="hover-posts">
                                                 <span><i class="fa fa-play"></i>Videoya Git</span>
                                             </a>
@@ -450,7 +450,7 @@ Your browser
                                 <div class="large-3 columns end landing-extra-small">
                                     <div class="post thumb-border">
                                         <div class="post-thumb">
-                                            <img src="http://placehold.it/180x140" alt="landing">
+                                            <img src="/thumbnails/<%= video.split(".")[0] %>.jpg" alt="landing">
                                          		<% if(video.split(".")[1] =="mkv") { %>
                         <a href="/convert/<%= video.split(".")[0] %>" class="hover-posts">
                             <span><i class="fa fa-play"></i>Convert Video</span>
@@ -937,18 +937,25 @@ Your browser
                                 <div class="large-12 medium-7 medium-centered columns">
                                     <div class="widgetBox">
                                         <div class="widgetTitle">
-                                            <h5>Most View Videos</h5>
+                                            <h5>En çok izlenen</h5>
                                         </div>
                                         <div class="widgetContent">
+										<% videos.forEach(function(video) { %>
                                             <div class="video-box thumb-border">
                                                 <div class="video-img-thumb">
-                                                    <img src="http://placehold.it/300x190" alt="most viewed videos">
-                                                    <a href="#" class="hover-posts">
-                                                        <span><i class="fa fa-play"></i>Watch Video</span>
-                                                    </a>
+                                                    <img  src="/thumbnails/<%= video.split(".")[0] %>.jpg" alt="most viewed videos">
+                                                  	<% if(video.split(".")[1] =="mkv") { %>
+                        <a href="/convert/<%= video.split(".")[0] %>" class="hover-posts">
+                            <span><i class="fa fa-play"></i>Convert Video</span>
+                        </a>
+						<% } else { %>
+						 <a href="/watch/<%= video %>" class="hover-posts">
+                            <span><i class="fa fa-play"></i>Watch Video</span>
+                        </a>
+							<% }  %>
                                                 </div>
                                                 <div class="video-box-content">
-                                                    <h6><a href="#">There are many variations of passage. </a></h6>
+                                                    <h6><a href="#"><%= video %> </a></h6>
                                                     <p>
                                                         <span><i class="fa fa-user"></i><a href="#">admin</a></span>
                                                         <span><i class="fa fa-clock-o"></i>5 January 16</span>
@@ -956,55 +963,9 @@ Your browser
                                                     </p>
                                                 </div>
                                             </div>
-                                            <div class="video-box thumb-border">
-                                                <div class="video-img-thumb">
-                                                    <img src="http://placehold.it/300x190" alt="most viewed videos">
-                                                    <a href="#" class="hover-posts">
-                                                        <span><i class="fa fa-play"></i>Watch Video</span>
-                                                    </a>
-                                                </div>
-                                                <div class="video-box-content">
-                                                    <h6><a href="#">There are many variations of passage. </a></h6>
-                                                    <p>
-                                                        <span><i class="fa fa-user"></i><a href="#">admin</a></span>
-                                                        <span><i class="fa fa-clock-o"></i>5 January 16</span>
-                                                        <span><i class="fa fa-eye"></i>1,862K</span>
-                                                    </p>
-                                                </div>
-                                            </div>
-                                            <div class="video-box thumb-border">
-                                                <div class="video-img-thumb">
-                                                    <img src="http://placehold.it/300x190" alt="most viewed videos">
-                                                    <a href="#" class="hover-posts">
-                                                        <span><i class="fa fa-play"></i>Watch Video</span>
-                                                    </a>
-                                                </div>
-                                                <div class="video-box-content">
-                                                    <h6><a href="#">There are many variations of passage. </a></h6>
-                                                    <p>
-                                                        <span><i class="fa fa-user"></i><a href="#">admin</a></span>
-                                                        <span><i class="fa fa-clock-o"></i>5 January 16</span>
-                                                        <span><i class="fa fa-eye"></i>1,862K</span>
-                                                    </p>
-                                                </div>
-                                            </div>
-                                            <div class="video-box thumb-border">
-                                                <div class="video-img-thumb">
-                                                    <img src="http://placehold.it/300x190" alt="most viewed videos">
-                                                    <a href="#" class="hover-posts">
-                                                        <span><i class="fa fa-play"></i>Watch Video</span>
-                                                    </a>
-                                                </div>
-                                                <div class="video-box-content">
-                                                    <h6><a href="#">There are many variations of passage. </a></h6>
-                                                    <p>
-                                                        <span><i class="fa fa-user"></i><a href="#">admin</a></span>
-                                                        <span><i class="fa fa-clock-o"></i>5 January 16</span>
-                                                        <span><i class="fa fa-eye"></i>1,862K</span>
-                                                    </p>
-                                                </div>
-                                            </div>
-                                        </div>
+												<% }) %>
+			
+									 </div>
                                     </div>
                                 </div><!-- end most view Widget -->
 
